# visualTranslate

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
ci/docker/python/: Dockerfile
src/visualTranslate/: main.py
