[metadata]
name = visual translate
version = 0.0.10
author = João Vieira
description = Detects text in images and translates it
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrebolo/visualTranslate

[options]
package_dir = 
    =src
zip_safe = True
include_package_data = True
install_requires = 
    transformers==4.37.2
    torch
    datasets==2.17.0
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    translate = visualTranslate.main:main